--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -5,245 +6,89 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <meta property="og:title" content="Washed out weekends: New Yorkers are not the only ones bummed out">
-  <meta property="og:description"
-    content="Weekends are rainy across US cities; surprisingly, there might be scientific explanations">
+  <!-- Open Graph / Twitter Card meta tags -->
+  <meta property="og:title" content="Ripple Effect of the Syrian Refugee Crisis">
+  <meta property="og:description" content="xxxxx">
   <meta property="og:type" content="article">
-  <meta property="og:image"
-    content="https://github.com/radhika3558/rainy-weekends/blob/main/images/Firefly%20rain%20in%20central%20park%2062342.jpg?raw=true">
+  <meta property="og:image" content="https://github.com/renatadaou/rainy-weekends/blob/main/syriangirl.png">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:creator" content="@radhika385">
-  <meta name="twitter:image"
-    content="https://github.com/radhika3558/rainy-weekends/blob/main/images/Firefly%20rain%20in%20central%20park%2062342.jpg?raw=true">
-  </meta>
+  <meta name="twitter:creator" content="@renatadaou">
+  <meta name="twitter:image" content="https://github.com/renatadaou/rainy-weekends/blob/main/syriangirl.png">
 
+  <!-- Stylesheets -->
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <!-- google fonts: Open Sans (sans-serif) and Lora (serif) -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap"
-    rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/6630dd9732.js" crossorigin="anonymous"></script>
-  <!-- Content here -->
 
-  <title>Syria Refugee Crisis</title>
+  <!-- FontAwesome -->
+  <script src="https://kit.fontawesome.com/6630dd9732.js" crossorigin="anonymous"></script>
+
+  <!-- Page Title and Favicon -->
+  <title>Syrian Refugees</title>
   <link rel="icon" href="syriangirl.png">
+
+
+<style>
+  body {
+      margin: 0;
+      font-size: 20px;
+      font-family: 'Lora', Georgia, 'Times New Roman', Times, serif;
+  }
+
+  .content {
+      max-width: 640px;
+      margin: auto;
+      padding: 0 1em;
+  }
+
+  .header, .footer {
+      padding: 3em 0;
+      text-align: center;
+  }
+
+  .footer {
+      background: #f4f4f4;
+      font-size: 0.8em;
+      margin-top: 4em;
+  }
+</style>
 </head>
 
-<body class="light-theme">
 
-  <div class="banner sans">
+  <header class="header">
+  <body class="light-theme">
+  <div class="banner sans" style="
+      background-image: url('syriangirl.png'); 
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      color: white;"> 
 
-    <h1 class="headline">The Ripple Effects of the Syrian Refugee Crisis</h1>
-    <h2 class="subhead sans-serif">Immigration policy changes. Xenophobia. Law enforcement. </h2>
-  </div>
-
-  <p class="sans-serif" style="font-size: 13px;
-              padding: 4px;;
-              color: rgb(152, 152, 152);" class="responsive">Photo: Image generated using DALL.E</p>
-
-  <section class="header" style="padding-top: 10px;">
-    <p class="byline sans-serif">By <a href="https://renatadaou.github.io/" target="_blank">Renata Daou</a>
-    </p>
-  </section>
-  <p></p>
-  <section class="story-body">
-    <p class="body-text serif">After a busy work week, New Yorkers look forward to having a relaxing weekend catching up
-      with friends and family or indulging in the many outdoor activities that New York City offers. But last year,
-      residents planning their weekends looked at their weather apps with disappointment.</p>
-
-    <p class="body-text serif"> Rain and subsequent event cancellations, prompted by inclement weather, resulted in New
-      Yorkers remaining indoors during weekends that would typically be bustling with social activities.
-    </p>
-    <p class="body-text serif"> October 2023 was particularly bad. New Yorkers were dismayed by seven consecutive
-      weekends of rain. Many took to social media to express their frustration.
-    </p>
-
-    <div class="tweet-section">
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Why does it only rain on the weekend in NYC <a
-            href="https://t.co/7SugSE6rQ0">pic.twitter.com/7SugSE6rQ0</a></p>&mdash; WHIZWANG ☕️ (@whizwang) <a
-          href="https://twitter.com/whizwang/status/1715754659283861945?ref_src=twsrc%5Etfw">October 21, 2023</a>
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <h1 class="headline" style="padding: 10px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); font-size: 54px;">Ripple Effect of the Syrian Refugee Crisis</h1>
+      <h2 class="subhead sans-serif" style="padding: 10px; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); font-size: 50px;">xxxxx</h2>
     </div>
-    <p class="body-text serif">An analysis of New York City weather data showed that rain occurred in the city on the
-      weekend or
-      around it (Friday or Monday) this year. </p>
+    <p class="sans-serif" style="font-size: 13px; padding: 4px; color: rgb(152, 152, 152);">Photo: Image generated using DALL.E</p>
+    <p>By <a href="https://renatadaou.github.io/">Renata Daou</a> | Mar. 6, 2024 </p>
+  </header>
 
-    <div class="chart-section">
-      <iframe title="Rain, rain, go away!" aria-label="Column Chart" id="datawrapper-chart-kCivk"
-        src="https://datawrapper.dwcdn.net/kCivk/1/" scrolling="no" frameborder="0"
-        style="width: 0; min-width: 100% !important; border: none;" height="584" data-external="1"></iframe>
-      <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
-      </script>
-    </div>
-
-    <h3 class="section-head">2023 was a rainy year</h3>
-
-    <p class="body-text serif">After a relatively dry 2022, New York City experienced a considerably high level of
-      rainfall in 2023. Data from the US National Weather Service showed that the city received 59.3 inches of rain.
-    </p>
-
-    <p class="body-text serif">In September and October, numerous neighborhoods experienced extensive block-wide
-      flooding. Brooklyn and Queens suffered the most severe impacts, although significant flooding also occurred in
-      various locations throughout the Bronx. The floodwaters inundated subway stations, leading to widespread
-      disruptions in subway and rail services. Additionally, many flights were canceled, and vehicular traffic
-      congestion resulted in widespread delays.</p>
-    <div class="tweet-section">
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">So rain every weekend is the new culture for NYC huh? 🙄</p>&mdash; Lil Nas X’s Twin.
-        (@Leeeskiiii) <a href="https://twitter.com/Leeeskiiii/status/1713225630572061170?ref_src=twsrc%5Etfw">October
-          14, 2023</a>
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <p class="body-text serif">El Niño and La Niña weather systems have been causing havoc across the world, including
-      in the United States. This is reflected in the volatile rainfall patterns in New York City as well. </p>
-
-    <p class="body-text serif">Meteorologist Katie Nickolaou predicts a drier 2024. “We are currently in an El Niño
-      year, which means the jet streams are in a less favorable position to guide storms into the NY area,” she said.
-    </p>
-    <div class="chart-section">
-      <iframe title="New York City experienced above average rainfall last year" aria-label="Interactive line chart"
-        id="datawrapper-chart-d9N8g" src="https://datawrapper.dwcdn.net/d9N8g/1/" scrolling="no" frameborder="0"
-        style="width: 0; min-width: 100% !important; border: none;" height="596" data-external="1"></iframe>
-      <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
-      </script>
-    </div>
-
-    <h3 class="section-head">New York City's parade is not the only one being rained on</h3>
-
-    <div class="tweet-section">
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">New Yorkers when the forecast is dry for the entire work week but features another chance
-          of rain on the weekend <a href="https://t.co/jCD0Utta2g">pic.twitter.com/jCD0Utta2g</a></p>&mdash; New York
-        Metro Weather (@nymetrowx) <a
-          href="https://twitter.com/nymetrowx/status/1732457932707557389?ref_src=twsrc%5Etfw">December 6, 2023</a>
-      </blockquote>
-      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-
-    <p class="body-text serif">Comparing weather patterns and systems is tricky. This investigation explored whether
-      other rainy cities in the US experienced wet weekends as well. </p>
-
-    <p class="body-text serif">One of the initial and quite unexpected discoveries was that New York City had a
-      higher rainfall rate than the infamously wet Seattle and even surpassed New Orleans, which is often recognized as
-      the rainiest city in the country.</p>
-
-    <p class="body-text serif">In a particularly tough year for New Orleans, the city grappled with severe drought
-      conditions that posed significant threats to its drinking water reserves.</p>
-
-    <div class="chart-section">
-      <iframe title="NYC out-rained other famously rainy cities" aria-label="Bar Chart" id="datawrapper-chart-m6vwy"
-        src="https://datawrapper.dwcdn.net/m6vwy/1/" scrolling="no" frameborder="0"
-        style="width: 0; min-width: 100% !important; border: none;" height="296" data-external="1"></iframe>
-      <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
-      </script>
-    </div>
-
-    <p class="body-text serif">This investigation revealed a consistent pattern of weekend rainfall in several major
-      U.S. cities. Notably, Fort Lauderdale, recognized as the rainiest city in the country in 2023, experienced
-      moderate
-      rain on 31 Saturdays and Sundays.</p>
-
-    <p class="body-text serif">Precipitation in New Orleans followed a similar trend, with rains occuring mostly on the
-      weekends despite lower overall rainfall.</p>
-
-    <p class="body-text serif">In Seattle, the pattern extended slightly beyond the weekend, with Fridays and Mondays
-      also showing a higher likelihood of rain, in addition to Sundays.</p>
-    <div class="chart-section">
-      <iframe src="images/output.html" height="500" width="700" scrolling="no" style ="border: 0"></iframe>
-    </div>
+  <div class="content">
+    <p>It has been almost a decade since the height of the Syrian Refugee Crisis in 2015. Yet its reverberations persist. With over 5 million registered Syrian refugees globally, its impact remains evident. This crisis has left an indelible mark on popular culture, inspiring numerous movies and books that shed light on its human stories. More importantly, the crisis has been a focal point in news coverage, exposing instances of racism towards Syrians and prompting discussions on immigration policies. The aftermath continues to be felt in Europe and beyond, with ongoing legal battles highlighting the enduring repercussions of this humanitarian crisis.</p>
 
 
-    <h3 class="section-head">Scientists attempt to explain the weekend rain</h3>
-    <p class="body-text serif"> Although these rainy weekends might be seen as a stroke of bad luck, scientists have
-      attempted to explain why this seems to happen. </p>
-    <p class="body-text serif">A 1998 study featured in <a href="https://www.nature.com/articles/29043"
-        target="_blank">Nature</a> by
-      researchers at Arizona State University suggested that rain is more likely to happen on weekends along the
-      Atlantic coast, attributing better weather on Mondays through Wednesdays to a "cloud-seeding effect" from heavy
-      East Coast pollution, especially car emissions during the workweek.</p>
 
-    <p class="body-text serif">However, this finding is disputed. Another study from the same year noted more wet
-      weekends in the northeast. A decade later, the same researcher concluded that precipitation doesn't significantly
-      vary by day of the week. Similarly, a 2001 study found no discernible weekly pattern in the intensity or frequency
-      of daily rainfall in the northeast.</p>
-    <p class="body-text serif">Here, a TikTok post by Scientific American tries to explain the phenomenon:</p>
-    <div class="tweet-section">
-      <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@scientificamerican/video/7292184508806434094"
-        data-video-id="7292184508806434094" style="max-width: 605px;min-width: 325px;">
-        <section> <a target="_blank" title="@scientificamerican"
-            href="https://www.tiktok.com/@scientificamerican?refer=embed">@scientificamerican</a> <a title="stitch"
-            target="_blank" href="https://www.tiktok.com/tag/stitch?refer=embed">#stitch</a> New York has had seven
-          rainy weekends in a row. Is it bad luck—or a natural weather phenomenon? Original video by @Bryan Jun <a
-            title="scientificamerican" target="_blank"
-            href="https://www.tiktok.com/tag/scientificamerican?refer=embed">#scientificamerican</a> <a title="stem"
-            target="_blank" href="https://www.tiktok.com/tag/stem?refer=embed">#stem</a> <a title="fyp" target="_blank"
-            href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="storm" target="_blank"
-            href="https://www.tiktok.com/tag/storm?refer=embed">#storm</a> <a title="weathertok" target="_blank"
-            href="https://www.tiktok.com/tag/weathertok?refer=embed">#weathertok</a> <a title="nyc" target="_blank"
-            href="https://www.tiktok.com/tag/nyc?refer=embed">#nyc</a> <a title="weekend" target="_blank"
-            href="https://www.tiktok.com/tag/weekend?refer=embed">#weekend</a> <a title="rain" target="_blank"
-            href="https://www.tiktok.com/tag/rain?refer=embed">#rain</a> <a title="rainy" target="_blank"
-            href="https://www.tiktok.com/tag/rainy?refer=embed">#rainy</a> <a title="autumn" target="_blank"
-            href="https://www.tiktok.com/tag/autumn?refer=embed">#autumn</a> <a title="sweaterweather" target="_blank"
-            href="https://www.tiktok.com/tag/sweaterweather?refer=embed">#sweaterweather</a> <a title="fall"
-            target="_blank" href="https://www.tiktok.com/tag/fall?refer=embed">#fall</a> <a target="_blank"
-            title="♬ original sound - Scientific American"
-            href="https://www.tiktok.com/music/original-sound-7292184537319213867?refer=embed">♬ original sound -
-            Scientific American</a> </section>
-      </blockquote>
-      <script async src="https://www.tiktok.com/embed.js"></script>
-    </div>
-    <p class="body-text serif">Let's hope the weekends this year aren't a wash!</p>
-  </section>
+ 
 
-  <section class="footer sans-serif" style="text-align:center;">
-    <p class="note"> To view code and methodology, check this <a href="https://github.com/radhika3558/rainy-weekends">Github repository</a>.</p>
-    <p class="lead" style="font-size: 1.25rem;">
-    <div style="text-align:center;">
-      <span style="color:rgb(16, 106, 231);font-weight:bold;">
-        <a class="button" href="https://github.com/radhika3558" style="color:inherit;text-decoration:none;">
-          <i class="fab fa-github"></i>
-          GitHub
-        </a>
-      </span>
-      <span style="color:rgb(16, 106, 231);font-weight:bold;">
-        <a class="button" href="https://www.linkedin.com/in/radhikarukmangadhan/"
-          style="color:inherit;text-decoration:none;"> <i class="fab fa-linkedin"></i>
-          LinkedIn
-        </a>
-      </span>
-      <span style="color:rgb(16, 106, 231);font-weight:bold;">
-        <a class="button" href="mailto:radhika.rukmangadhan[at]gmail.com" style="color:inherit;text-decoration:none;">
-          <i class="fa-solid fa-envelope"></i>
-          Email
-        </a>
-      </span>
-    </div>
-
-    </p>
-  </section>
-
+  <!-- The rest of your content... -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-  <script src="script.js"></script>
-  </div>
-</body>
-
-</html>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin
