--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
     
     <p>
-      During the Tokyo 2020 Olympics, Yusra Mardini gained recognition as a 23-year-old swimmer representing the Refugee Olympic Team. She had made the journey from war-torn Syria to Germany with her sister, working her way to the Olympic stage. She wrote her experiences in a book, called "Butterfly: From Refugee to Olympian – My Story of Rescue, Hope, and Triumph," which was then adapted into a movie. 
+      During the Tokyo 2020 Olympics, Yusra Mardini gained recognition as a 23-year-old swimmer representing the Refugee Olympic Team. She had made the journey from war-torn Syria to Germany with her sister, working her way to the Olympic stage. She wrote her experiences in a book, called "Butterfly: From Refugee to Olympian – My Story of Rescue, Hope, and Triumph," which was then adapted into a movie. This was during the height of the migration crisis in Syria due to the multi-sided civil war in the country.
 
     </p>
     
@@ -276,7 +276,17 @@
     <div style="height: 20px;"></div>
 
     <p>
-      In 2018, Sarah faced legal troubles when she was arrested as she prepared to leave Lesbos for Bard University in Berlin. Accused by Greek police of various offenses including money laundering and smuggling, she spent three months in jail before being released on bail. Similar accusations were levied against other volunteers, including Athanasios Karakitsos and Seán Binder, who also participated in rescue operations. Despite their work being within the scope of humanitarian efforts, they are at risk of lengthy prison sentences, up to 25 years. Their case is still ongoing. 
+      The story of Yusra Mardini is one of resilience and hope, but it is not the only one. Sarah Mardini, Yusra's sister, is another example of the strength and courage displayed by Syrian refugees. Sarah was a student in Damascus when the war broke out, and she later became a volunteer with the Emergency Response Centre International, a humanitarian organization that provides aid to refugees. She was involved in rescue operations, helping to save the lives of thousands of refugees crossing the Aegean Sea from Turkey to Greece.
+    </p>
+    <p>
+      While Yursa was busy training for the Olympics, Sarah went back to the Island of Lesbos, in Greece, one of the places they passed during their journey, many times over two years to volunteer with the Greek non-profit Emergency Response Center International (ECRI), “a non-profit organization that provides emergency response and humanitarian aid in life-threatening environments.” 
+</p>
+
+    <p>
+      In 2018, Sarah faced legal troubles when she was arrested as she prepared to leave Lesbos for Bard University in Berlin. Accused by Greek police of various offenses, she spent three months in jail before being released on bail. One of the accusations involves labeling the operations conducted by the nonprofit as a criminal organization. These operations, including monitoring maritime radio channels and websites for refugee boat information, are being portrayed as espionage, and fundraising efforts are being likened to money laundering. 
+      </p>
+
+    <p>Similar accusations were levied against other volunteers, including Athanasios Karakitsos and Seán Binder, who also participated in rescue operations. Despite their work being within the scope of humanitarian efforts, they are at risk of lengthy prison sentences, up to 25 years. Their case is still ongoing. 
     </p>
 
     <p>The plight of Syrian refugees is not isolated. Conflicts in regions like Libya and other North African countries have driven countless individuals to seek refuge in countries perceived as safer, such as Italy and Greece. Yet, the perilous journey across the Mediterranean often requires the intervention of humanitarian groups to ensure their safe passage.
@@ -331,7 +341,8 @@
     A minimum of 171 individuals have been targeted and subjected to criminalization, facing charges ranging from money laundering to membership in criminal organizations, espionage, and improper use of documentation.
   </div>
 
-
+<p>In Sarah's case, Human Rights Watch has stated that Sarah and her fellow humanitarians, who conducted search and rescue missions in the Aegean Sea and provided aid to arrivals on Lesbos, did not violate the law. The law they allegedly breached, Law 4251 of 2014, explicitly exempts assistance to asylum seekers. Furthermore, they were associated with a registered humanitarian organization
+</p>
 
     <footer class="footer">
       <p>Thank you for reading! You can find the code for this data story <a href="https://github.com/renatadaou/migration">here</a>.</p>
