--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@
 <p>In Sarah's case, Human Rights Watch has stated that Sarah and her fellow humanitarians, who conducted search and rescue missions in the Aegean Sea and provided aid to arrivals on Lesbos, did not violate the law. The law they allegedly breached, Law 4251 of 2014, explicitly exempts assistance to asylum seekers. Furthermore, they were associated with a registered humanitarian organization
 </p>
 
+</div>
     <footer class="footer">
       <p>Thank you for reading! You can find the code for this data story <a href="https://github.com/renatadaou/migration">here</a>.</p>
   </footer>
