--- a/index.html
+++ b/index.html
@@ -28,10 +28,142 @@
 
   <!-- Page Title and Favicon -->
   <title>Syrian Refugees</title>
-  <link rel="icon" href="syriangirl.png">
 
 
 <style>
+  body {
+    margin: 0;
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-rendering: optimizeLegibility;
+}
+
+.content {
+    max-width: 640px;
+    margin: auto;
+}
+
+.header {
+    padding: 3em 0;
+}
+
+a {
+    color: #f05349;
+}
+
+.footer {
+    background: #f4f4f4;
+    text-align: center;
+    font-size: 0.8em;
+    margin-top: 4em;
+    padding: 4em 0;
+}
+
+figure {
+    margin: 0;
+    padding-bottom: 1.2em;
+}
+
+figcaption {
+    font-size: 0.8em;
+    text-align: center;
+    margin-top: 0.5em;
+    color: #666;
+}
+
+h1 {
+    font-family: 'Lora', Georgia, serif;
+    font-weight: bold;
+    font-size: 3em;
+    line-height: 1.1;
+}
+
+.subhead {
+    font-family: 'Lora', Georgia, serif;
+}
+
+iframe,
+img,
+video {
+    max-width: 100%;
+}
+
+p {
+    line-height: 1.6;
+    margin: 0;
+    padding-bottom: 1.2em;
+}
+
+ul {
+    margin: 0;
+    padding-bottom: 1em;
+    line-height: 1.6;
+}
+
+iframe {
+    padding-bottom: 1.2em;
+}
+
+code {
+    font-family: 'Courier New', monospace;
+    background: #fff880;
+}
+
+/* margin on mobile */
+@media (max-width: 640px) {
+    body {
+        font-size: 18px;
+    }
+
+    .content {
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+    }
+}
+</style>
+<style>
+.with-image-bg,
+.with-video-bg {
+    position: relative;
+    background-size: cover;
+    margin-bottom: 2em;
+
+    /* Center everything inside */
+    min-height: 70svh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* White text with a shadow */
+    color: white;
+    text-shadow: 0px 0px 30px black,
+        0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.with-image-bg {
+    background-image: url('bg-image.jpg');
+}
+
+.video-background {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.video-background video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
+
   body {
     margin: 0;
     padding: 0;
@@ -109,34 +241,67 @@
         .video-container {
           max-width: 100%;
         }
+        .video-background {
+          position: absolute;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          z-index: -1;
+      }
+
+      .video-background video {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+      }
+
+      .with-video-bg {
+        position: relative;
+        background-size: cover;
+        margin-bottom: 2em;
+
+        /* Center everything inside */
+        min-height: 70svh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        /* White text with a shadow */
+        color: white;
+        text-shadow: 0px 0px 30px black,
+            0px 0px 10px rgba(0, 0, 0, 0.5);
+    }
+    iframe,
+    img,
+    video {
+        max-width: 100%;
+    }
     }
   
   
 </style>
+
 </head>
 
 <body class="light-theme">
-  <header class="header">
 
-  <div class="banner sans" style="
-      background-image: url('syriangirl.png'); 
-      background-size: cover;
-      background-position: center;
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      color: white;"> 
 
-      <h1 class="headline" style="padding: 10px; text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.5); font-size: 54px;">Ripple Effect of the Syrian Refugee Crisis</h1>
-      <h2 class="subhead sans-serif" style="padding: 10px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); font-size: 20px;">The criminalization of humanitarian work has increased since the peak of migration out of Syria in 2016. The actions taken by EU member states have left asylum-seeking immigrants isolated and devoid of assistance upon their arrival in Europe, following arduous and dangerous journeys</h2>
-    </div>
-    <p class="sans-serif" style="font-size: 13px; padding: 4px; color: rgb(152, 152, 152);">Photo: Image generated using DALL.E</p>
-    <p>By <a href="https://renatadaou.github.io/">Renata Daou</a> | Mar. 6, 2024 </p>
-  </header>
+    <div class="header with-video-bg">
+      <div class="video-background">
+          <video src="video.mp4" preload="auto" tabindex="0" playsinline autoplay loop muted></video>
+      </div>
+      <div class="content">
+          <h1>Ripple Effect of the Syrian Refugee Crisis</h1>
+          <p class="subhead">The criminalization of humanitarian work has increased since the peak of migration out of Syria in 2016. The actions taken by EU member states have left asylum-seeking immigrants isolated and devoid of assistance upon their arrival in Europe, following arduous and dangerous journeys</p>
+          <p class="sans-serif" style="font-size: 13px; padding: 4px; color: rgb(255, 254, 254);">Video: Samar Layek on Pexels</p>
+      </div>
+  </div>
+  <div class="content">
+      <div class="byline">
+          <p>By <a href="https://renatadaou.github.io/">Renata Daou</a> | Mar. 6, 2024 </p>
+      </div>
+      
+  </div>
 
   <div class="content">
     <p>Nearly a decade has passed since the height of the Syrian Refugee Crisis in 2015, yet its repercussions persist. With over 5 million registered Syrian refugees globally, its enduring impact is unmistakable. This crisis has permeated popular culture, inspiring numerous films and books that illuminate its human stories. Moreover, it has served as a focal point in media coverage, unveiling instances of racism towards Syrians and sparking debates on immigration policies. Its aftermath continues to reverberate in Europe and beyond, as ongoing legal battles underscore the lasting consequences of this humanitarian catastrophe.
